--- a/Client/Pages/ListAllSlideDecksPage.razor
+++ b/Client/Pages/ListAllSlideDecksPage.razor
@@ -6,31 +6,39 @@
 
 <h3>ListAllSlideDecksPage</h3>
 
-@if (SlideDecksAll != null) {
-    <MudTable Items="@SlideDecksAll" Hover="true" Breakpoint="Breakpoint.Sm">
-        <HeaderContent>
-            <MudTh>Title</MudTh>
-            <MudTh>Description</MudTh>
-            <MudTh>Page count</MudTh>
-            <MudTh>AccessLevel</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd>@context.Title</MudTd>
-            <MudTd>@context.Description</MudTd>
-            <MudTd>@context.Slides.Count</MudTd>
-            <MudTd>@context.AccessLevel</MudTd>
-            <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeck/{context.Id}"))">View</MudButton></MudTd>
-            <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"editSlideDeck/{context.Id}"))">Edit</MudButton></MudTd>
+<AuthorizeView Roles="Admin,ContentCreator">
+    <Authorized>
+        @if (SlideDecksAll != null) {
+            <MudTable Items="@SlideDecksAll" Hover="true" Breakpoint="Breakpoint.Sm">
 
-        </RowTemplate>
-    </MudTable>
-}
+                <HeaderContent>
+                    <MudTh>Title</MudTh>
+                    <MudTh>Description</MudTh>
+                    <MudTh>Page count</MudTh>
+                    <MudTh>AccessLevel</MudTh>
+                </HeaderContent>
+                <RowTemplate Context="deck">
+                    <MudTd>@deck.Title</MudTd>
+                    <MudTd>@deck.Description</MudTd>
+                    <MudTd>@deck.Slides.Count</MudTd>
+                    <MudTd>@deck.AccessLevel</MudTd>
+                    <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeck/{deck.Id}"))">View</MudButton></MudTd>
+                    <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"editSlideDeck/{deck.Id}"))">Edit</MudButton></MudTd>
 
-@if (SlideDecksAll != null) {
-    <MudGrid>
+                </RowTemplate>
+            </MudTable>
+        }
+    </Authorized>
+</AuthorizeView>
+
+@if (SlideDecksPublished != null) {
+
+    @*<MudGrid>
+        <MudItem xs="1" sm="3"></MudItem>*@
+    <MudContainer MaxWidth="MaxWidth.Medium">
         @foreach (var slidedeck in SlideDecksAll) {
-            <MudItem xs="12" sm="6">
-                <MudPaper Elevation="3" Class="pa-2 mr-2">
+            @*<MudItem xs="10" sm="6">*@
+                <MudPaper Elevation="3" Class="pa-2 mb-4">
                     <MudText Typo="Typo.h6">@slidedeck.Title</MudText>
                     @if (!string.IsNullOrWhiteSpace(slidedeck.CoverImage)) {
                         <div>
@@ -39,27 +47,31 @@
                         </div>
                     }
                     <MudText Typo="Typo.body1">@slidedeck.Description</MudText>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeck/{slidedeck.Id}"))">Learn More</MudButton>
                 </MudPaper>
-            </MudItem>
+            @*</MudItem>*@
         }
-    </MudGrid>
-}
-@code {
-    List<SlideDeck> SlideDecksPublished;
-    List<SlideDeck> SlideDecksAll;
-    protected override async Task OnInitializedAsync() {
-        var r = await SlideDeckService.GetPublished();
-        if (r.Success) {
-            SlideDecksPublished = r.Data;
-        } else {
-            Snackbar.Add($"Could not get publushed. Error: {r.Message}", Severity.Error);
+        @*<MudItem xs="1" sm="3"></MudItem>*@
+        @*</MudGrid>*@
+        </MudContainer>
         }
 
-        r = await SlideDeckService.GetAsContentCreator();
-        if (r.Success) {
-            SlideDecksAll = r.Data;
-        } else {
-            Snackbar.Add($"Could not get as content creator. Error: {r.Message}", Severity.Error);
+        @code {
+            List<SlideDeck> SlideDecksPublished;
+            List<SlideDeck> SlideDecksAll;
+protected override async Task OnInitializedAsync() {
+            var r = await SlideDeckService.GetPublished();
+            if (r.Success) {
+                SlideDecksPublished = r.Data;
+            } else {
+                Snackbar.Add($"Could not get publushed. Error: {r.Message}", Severity.Error);
+            }
+
+            r = await SlideDeckService.GetAsContentCreator();
+            if (r.Success) {
+                SlideDecksAll = r.Data;
+            } else {
+                Snackbar.Add($"Could not get as content creator. Error: {r.Message}", Severity.Error);
+            }
         }
-    }
-}
+        }
