--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,32 +1,40 @@
 ﻿@inject Learning.Client.Services.IMenuContentService Menu
-
+<Learning.Client.Components.UserAvatarActiveView></Learning.Client.Components.UserAvatarActiveView>
 <MudDivider Class="mb-4" />
 <MudNavMenu>
+    <MudNavLink Href="allUserAvatars" Icon="@Icons.Material.Filled.ListAlt" Disabled="true">Avatars</MudNavLink>
+
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Content</MudText>
+    <MudNavGroup Title="Slide decks" Expanded="true">
+        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">All</MudNavLink>
+        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
+        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
+    </MudNavGroup>
+    <MudNavGroup Title="Programs" Expanded="true">
+        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">All</MudNavLink>
+        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
+        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
+    </MudNavGroup>
+
+
+
+
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Loading test</MudText>
+    @foreach (var item in Menu.GetMenues()) {
+<MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">@item</MudNavLink>}
+
+
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
     <MudNavLink Href="/personal/dashboard" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
     <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>
 
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">App Examples</MudText>
-    <MudNavLink Href="application/email" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Email">Email</MudNavLink>
-    <MudNavLink Href="application/chat" Icon="@Icons.Material.Outlined.Forum">Chat</MudNavLink>
-    <MudNavLink Href="application/todo" Icon="@Icons.Custom.Uncategorized.AlertSuccess" Disabled="true">Todo</MudNavLink>
-    <MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">Users</MudNavLink>
-    @foreach (var item in Menu.GetMenues()) {
-        <MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">@item</MudNavLink>
-    }
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Pages</MudText>
     <MudNavGroup Title="Authentication" Icon="@Icons.Material.Outlined.AssignmentInd" HideExpandIcon="true">
         <MudNavLink Href="pages/authentication/login" Icon="@Icons.Material.Outlined.InsertDriveFile">Login</MudNavLink>
         <MudNavLink Href="pages/authentication/register" Icon="@Icons.Material.Outlined.InsertDriveFile">Register</MudNavLink>
         <MudNavLink Href="pages/authentication/forgot-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Forgot Password</MudNavLink>
         <MudNavLink Href="pages/authentication/reset-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Reset Password</MudNavLink>
     </MudNavGroup>
-    <MudNavGroup Title="Error" HideExpandIcon="true">
-        <MudNavLink Href="pages/error/404" Icon="@Icons.Material.Outlined.InsertDriveFile">404</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Utility" Icon="@Icons.Material.Outlined.Assignment" HideExpandIcon="true">
-        <MudNavLink Href="pages/utility/faq" Icon="@Icons.Material.Outlined.InsertDriveFile">Faq</MudNavLink>
-    </MudNavGroup>
+
 </MudNavMenu>
 
  @code{
