--- a/Client/Components/SlideDeckView.razor
+++ b/Client/Components/SlideDeckView.razor
@@ -1,20 +1,24 @@
 ﻿@using Learning.Shared.DbModels
 
 @if (SlideDeck != null) {
+<MudPaper Class="pa-16 ma-2" Elevation="3">
     <MudText Typo="Typo.h6">@SlideDeck.Title</MudText>
-    <MudText Typo="Typo.body1">@SlideDeck.Description</MudText>
-    @if (!string.IsNullOrWhiteSpace(SlideDeck.CoverImage)) {
-        <div>
-            <img src="@SlideDeck.CoverImage" class="width:100%;" />
-
-        </div>
-    }
-    @if (SlideDeck.Slides != null) {
-        @foreach (var slide in SlideDeck.Slides) {
-            <br />
-            <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+    <MudDivider Class="mb-4" />
+    <div class="d-flex justify-space-between py-2 px-1 mt-6">
+        <MudText Typo="Typo.body1">@SlideDeck.Description</MudText>
+        @if (!string.IsNullOrWhiteSpace(SlideDeck.CoverImage)) {
+            <div class="ma-1">
+                <img src="@SlideDeck.CoverImage" class="width:100%;" />
+            </div>
         }
-    }
+    </div>
+        @if (SlideDeck.Slides != null) {
+            @foreach (var slide in SlideDeck.Slides) {
+                <br />
+                <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+            }
+        }
+</MudPaper>
 }
  
 @code {
